README with examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_new_root)
+importFrom(xml2,xml_replace)
 importFrom(xml2,xml_set_attrs)
 importFrom(xml2,xml_text)
