--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,8 @@ importFrom(markdown,markdownToHTML)
 importFrom(methods,new)
 importFrom(methods,setRefClass)
 importFrom(pbapply,pblapply)
-importFrom(plyr,ldply)
+importFrom(plyr,.)
+importFrom(plyr,dlply)
 importFrom(stringi,stri_extract_all)
 importFrom(xml2,write_xml)
 importFrom(xml2,xml_add_child)
@@ -19,5 +20,6 @@ importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_new_root)
 importFrom(xml2,xml_replace)
+importFrom(xml2,xml_set_attr)
 importFrom(xml2,xml_set_attrs)
 importFrom(xml2,xml_text)
