--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo apt-get install -y libpoppler-glib-dev poppler-utils
   - Rscript -e 'install.packages(pkgs = c("Rpoppler"))'
 
-warnings_are_errors: true
+warnings_are_errors: false
 
 notifications:
   email:
