--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 
 before_install:
   - sudo apt-get install -y libpoppler-glib-dev poppler-utils
-  - Rscript -e 'install.packages(pkgs = c("Rpoppler"))'
+  - Rscript -e 'install.packages(pkgs = c("Rpoppler", "covr"))'
 
 warnings_are_errors: false
 
