--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,11 @@ export(PDF)
 export(broom)
 export(restore_paragraphs)
 import(knitr)
+importFrom(R6,R6Class)
 importFrom(Rpoppler,PDF_info)
 importFrom(htmltools,HTML)
 importFrom(htmltools,html_print)
 importFrom(markdown,markdownToHTML)
-importFrom(methods,new)
-importFrom(methods,setRefClass)
 importFrom(pbapply,pblapply)
 importFrom(plyr,.)
 importFrom(plyr,dlply)
