--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(PDF)
 export(broom)
+export(pdf_to_xml)
 export(restore_paragraphs)
 import(knitr)
 importFrom(R6,R6Class)
@@ -9,10 +10,12 @@ importFrom(Rpoppler,PDF_info)
 importFrom(htmltools,HTML)
 importFrom(htmltools,html_print)
 importFrom(markdown,markdownToHTML)
+importFrom(methods,setOldClass)
 importFrom(pbapply,pblapply)
 importFrom(plyr,.)
 importFrom(plyr,dlply)
 importFrom(stringi,stri_extract_all)
+importFrom(xml2,read_xml)
 importFrom(xml2,write_xml)
 importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_attrs)
