--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(PDF)
 export(broom)
 export(pdf_to_xml)
 export(restore_paragraphs)
-import(knitr)
 importFrom(R6,R6Class)
 importFrom(Rpoppler,PDF_info)
 importFrom(htmltools,HTML)
 importFrom(htmltools,html_print)
+importFrom(knitr,include_graphics)
 importFrom(markdown,markdownToHTML)
 importFrom(methods,setOldClass)
 importFrom(pbapply,pblapply)
