Rpoppler dependency fully removed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,14 @@ export(broom)
 export(pdf_to_xml)
 export(restore_paragraphs)
 importFrom(R6,R6Class)
-importFrom(Rpoppler,PDF_info)
 importFrom(htmltools,HTML)
 importFrom(htmltools,html_print)
 importFrom(knitr,include_graphics)
 importFrom(markdown,markdownToHTML)
 importFrom(methods,setOldClass)
 importFrom(pbapply,pblapply)
+importFrom(pdftools,pdf_info)
+importFrom(pdftools,pdf_pagesize)
 importFrom(plyr,.)
 importFrom(plyr,dlply)
 importFrom(stringi,stri_extract_all)
