--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
   - libxml2-utils
 
 before_install:
-  - sudo apt-get install -y libpoppler-glib-dev poppler-utils
+  - sudo apt-get install -y libpoppler-glib-dev poppler-utils libpoppler-cpp-dev
   - Rscript -e 'install.packages(pkgs = c("Rpoppler", "covr"))'
 
 warnings_are_errors: false
